Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63396

Wrong QTreeView branch icon for closed item in Fusion theme when RTL layout direction used

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9
    • 5.6.3, 5.9.1
    • Widgets: Styles
    • None

    Description

      See attached screenshot. I think that closed indicator should point to the left.

      #include <QApplication>
      #include <QTreeView>
      #include <QStandardItemModel>
      #include <QStyleFactory>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          a.setLayoutDirection(Qt::RightToLeft);
          a.setStyle(QStyleFactory::create("Fusion"));
      
          QTreeView w;
          QStandardItemModel model;
          QStandardItem *parentItem = model.invisibleRootItem();
          for (int i = 0; i < 4; ++i) {
              QStandardItem *item = new QStandardItem(QString("item %0").arg(i));
              parentItem->appendRow(item);
              parentItem = item;
          }
          w.setModel(&model);
          w.show();
      
          return a.exec();
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-63396
        # Subject Branch Project Status CR V

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            dimkanovikov Dimka Novikov
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes